added a red macro

--- a/preamble.tex
+++ b/preamble.tex
@@ -119,3 +119,5 @@
 \newcommand*{\vdashHP}{\vdash_\text{\lr{HP}}}
 \newcommand*{\upset}{\uparrow\!\!}
 \newcommand*{\downset}{\downarrow\!\!}
+
+\newcommand{\red}{\color{red}}
